# baseball

./: .gitattributes  .gitignore  README.md  baseball.bak  requirements.txt  setup.cfg
baseball/: constants.py  get_data.py  model.py  parse_data.py  settings.py
devtools/: restore_db.sh
devtools/jenkins/: jenkins.sh
notebooks/: 2016 Pitcher Home Runs.ipynb  Batter_Interference_calls.ipynb  Cycles.ipynb  Pitcher Walk Run.ipynb
scraper/model/: __init__.py  batter.py  event.py  game.py  parsedfile.py  pitcher.py  team.py
scraper/parse/: boxscore_parser.py  events_parser.py  get_data.py  parse_data.py
src/: constants.py  settings.py
src/analyze/: driver.py  model.py  naive.py  pickleutil.py
src/analyze/algorithm/: naive.py
src/analyze/draftkings/: scorer.py
src/analyze/evaluate/: __init__.py  average.py  truth.py
src/analyze/matrixfilter/: average.py
src/model/: __init__.py  batterpitchermatrix.py  calculator.py  dbcollection.py  event.py  game.py  gameresult.py
src/scraper/: foo.db
src/scraper/model/: __init__.py  team.py
src/scraper/parse/: __init__.py  boxscore_parser.py  events_parser.py  get_data.py  parse_data.py
