[metadata]
name = baseball
author = Karl Leswing
summary = ETL to Relational Database For MLB Data
description-file = README.md
home-page = https://github.com/lilleswing/baseball
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
keywords =
    setup
    distutils
[files]
packages =
    baseball
